[package]
name = "cargo-review"
version = "0.1.0"
edition = "2021"

license = "Apache-2.0 OR MIT"
description = "Security audit tooling container"
homepage = "https://crabnebula.dev"
documentation = "https://docs.rs/cargo-review"
repository = "https://github.com/felsweg-crabnebula/cargo-review"
readme = "README.md" 
keywords = ["audit", "Tauri"]


[dependencies]
